--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,13 +1,23 @@
 <ion-content [fullscreen]="true">
   <ion-navbar>
     <ion-title class="titles">
-      Home
+      Host
     </ion-title>
   </ion-navbar>
-  <ion-toolbar>
-    <ion-searchbar></ion-searchbar>
-  </ion-toolbar>
+
+  <h1 class="questions">Match title
+    <ion-input placeholder="Match details"></ion-input>
+  </h1>
+  <h1 class="questions">Match title
+    <ion-input placeholder="Match details"></ion-input>
+  </h1>
+  <h1 class="questions">Match title
+    <ion-input placeholder="Match details"></ion-input>
+  </h1>
+  <h1 class="questions">Match title
+    <ion-input placeholder="Match details"></ion-input>
+  </h1>
 
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+
 </ion-content>
