--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,15 @@
 .titles{
     text-align:center;
     font-size: 75px;
+    border-style:solid;
+    background-color: grey;
+}
+.questions{
+    border: 2px solid grey;
+    border-radius:25px;
+    width: 50%;
+    text-align: center;
+    height: 100px;
+    background-color: lightgrey;
+
 }
