--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,9 +5,17 @@
     </ion-title>
   </ion-navbar>
 
+  <!-- <ion-title>
+    <ion-button routerLink="/home" size ="small"> Home
+      <ion-icon name="arrow-undo-circle-outline"></ion-icon>   
+      <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
+  </ion-title> -->
+
+
 
 
   
+
 
 
 </ion-content>
