--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -5,11 +5,11 @@
     background-color: grey;
 }
 .questions{
+    margin-top: 30px;
     border: 2px solid grey;
     border-radius:25px;
-    width: 50%;
+    width: 100%;
     text-align: center;
-    height: 100px;
+    height: 7%;
     background-color: lightgrey;
-
 }
