--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,10 +1,30 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+<ion-navbar>
+  <ion-button routerLink="/home" size ="small"> Home
+    <ion-icon name="home-outline"></ion-icon>    </ion-button>
+  <ion-title class="titles">
+    Join
+  </ion-title>
+</ion-navbar>
+  
+  <h1 class="questions">
+    <ion-input placeholder="Park name" margin-top= 100px></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Sport"></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Date"></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Age"></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Number of players"></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Player's profiles"></ion-input>
+  </h1>
 
 
 </ion-content>
