--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,10 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+<ion-navbar>
+  <ion-button routerLink="/home" size ="small"> Home
+    <ion-icon name="home-outline"></ion-icon>    </ion-button>
+  <ion-title class="titles">
+    Account
+  </ion-title>
+</ion-navbar>
+  <h1 class="questions">
+    <ion-input placeholder="full name"></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Age"></ion-input>
+  </h1>
+  <h1 class="questions">
+    <ion-input placeholder="Bio"></ion-input>
+  </h1>
+
 
 
 </ion-content>
