--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,16 +21,35 @@
   </ion-row>  
 </ion-header>
 <ion-content> 
-  <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+  <ion-fab vertical="middle" horizontal="start" slot="fixed">
     <ion-fab-button (click)="ShowCords()" ion-fab color="tertiary">
-      <ion-icon name="information-circle-outline"></ion-icon>
+      <ion-icon name="information-circle-outline" margin-bottom= 200px></ion-icon> 
     </ion-fab-button>
   </ion-fab>
-  <div class="map-wrapper" style="height: 100%;">      
+  <div class="map-wrapper" style="height: 90%;">      
     <div id="map_center">
       <ion-icon name="pin" size="large" color="danger"></ion-icon>      
     </div>
-    <div #map id="map"  style="height: 100%;"></div>
-  </div>   
+    <div #map id="map"  style="height: 90%;"></div>
+  </div> 
+  <!-- tabs  -->
+  <ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="tab1" routerLink = "/tabs/tab1">
+      <ion-icon name="basketball"></ion-icon>
+      <ion-label>Host</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab2" routerLink = "/tabs/tab2">
+      <ion-icon name="location-outline"></ion-icon>
+      <ion-label>Join</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab3" routerLink = "/tabs/tab3">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Account</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
 
 </ion-content>
