50% done with the Host/player container

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,19 +1,51 @@
 <ion-content [fullscreen]="true">
-  <ion-navbar>
-    <ion-title class="titles">
-      Host
-    </ion-title>
-  </ion-navbar>
-
-  <!-- <ion-title>
-    <ion-button routerLink="/home" size ="small"> Home
-      <ion-icon name="arrow-undo-circle-outline"></ion-icon>   
+  <div>
+   <ion-button routerLink="/home" size ="small"> Home
+      <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
+    </ion-button>  
       <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
-  </ion-title> -->
-
-
-
-
+  </div> 
+  <h1>Hugh National Park</h1>
+  <h2> <ion-icon src="../../assets/icon/Vector2.png"></ion-icon>
+    3577 Saint jone ave.
+  </h2>
+   <div id= "sport"> 
+    Sport
+  </div>
+  <ion-datetime>DD MMM H:mm</ion-datetime>
+  
+  <div id= "container">
+      <h1> <span display=inline> Host</span>
+      <span float="left"> Players</span>
+    </h1>
+      <!-- <body>
+        <ion-item id="hostplayer">
+          <ion-label>Jaden</ion-label>
+          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        </ion-item>
+        List of players 
+      <ion-list id="players">
+        <ion-item >
+          <ion-label>Nery</ion-label>
+          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Charmander</ion-label>
+          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Blue eyes white dragon</ion-label>
+          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        </ion-item>
+        <ion-item>
+          <ion-label>Philip J. Fry</ion-label>
+          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        </ion-item>
+      </ion-list>
+    </body> -->
+    </div>
+  <div id="Joinbutton"> Join</div>
+    
   
 
 
