--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,51 +1,51 @@
-
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-searchbar [(ngModel)]="autocomplete.input" (ionInput)="UpdateSearchResults()" placeholder="Search for a place"  (ionClear)="ClearAutocomplete()"></ion-searchbar>
-  </ion-toolbar>
-  <ion-list [hidden]="autocompleteItems.length == 0">
-    <ion-item *ngFor="let item of autocompleteItems" tappable (click)="SelectSearchResult(item)">
-      {{ item.description }}
-    </ion-item>
-  </ion-list>
-  <ion-row>    
-    <ion-col size="6">
-      <ion-text>Google & Ionic Map</ion-text>
-    </ion-col>
-    <ion-col  size="6">
-      <ion-button (click)="loadMap()" shape="round" fill="outline">
-        <ion-icon slot="start" name="locate"></ion-icon>
-          Where I Am
-        </ion-button>
-    </ion-col>
-  </ion-row>  
-</ion-header>
-<ion-content> 
-  <ion-fab vertical="middle" horizontal="start" slot="fixed">
-    <ion-fab-button (click)="ShowCords()" ion-fab color="tertiary">
-      <ion-icon name="information-circle-outline" margin-bottom= 200px></ion-icon> 
-    </ion-fab-button>
-  </ion-fab>
-  <div class="map-wrapper" style="height: 90%;">      
-    <div id="map_center">
-      <ion-icon name="pin" size="large" color="danger"></ion-icon>      
-    </div>
-    <div #map id="map"  style="height: 90%;"></div>
-  </div> 
+<ion-content>
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-searchbar [(ngModel)]="autocomplete.input" (ionInput)="UpdateSearchResults()" placeholder="Search for a place"  (ionClear)="ClearAutocomplete()"></ion-searchbar>
+    </ion-toolbar>
+    <ion-list [hidden]="autocompleteItems.length == 0">
+      <ion-item *ngFor="let item of autocompleteItems" tappable (click)="SelectSearchResult(item)">
+        {{ item.description }}
+      </ion-item>
+    </ion-list>
+    <ion-row>    
+      <ion-col size="6">
+        <ion-text>Google & Ionic Map</ion-text>
+      </ion-col>
+      <ion-col  size="6">
+        <ion-button (click)="loadMap()" shape="round" fill="outline">
+          <ion-icon slot="start" name="locate"></ion-icon>
+            Where I Am
+          </ion-button>
+      </ion-col>
+    </ion-row>  
+  </ion-header>
+  <ion-content> 
+    <ion-fab vertical="bottom" horizontal="start" slot="fixed">
+      <ion-fab-button (click)="ShowCords()" ion-fab color="tertiary">
+        <ion-icon name="information-circle-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+    <div class="map-wrapper" style="height: 100%;">      
+      <div id="map_center">
+        <ion-icon name="pin" size="large" color="danger"></ion-icon>      
+      </div>
+      <div #map id="map"  style="height: 100%;"></div>
+    </div>   
   <!-- tabs  -->
   <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" routerLink = "/tabs/tab1">
+    <ion-tab-button tab="tab1" >
       <ion-icon name="basketball"></ion-icon>
       <ion-label>Host</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" routerLink = "/tabs/tab2">
+    <ion-tab-button tab="tab2" >
       <ion-icon name="location-outline"></ion-icon>
       <ion-label>Join</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" routerLink = "/tabs/tab3">
+    <ion-tab-button tab="tab3" >
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Account</ion-label>
     </ion-tab-button>
