--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,14 +1,14 @@
 <ion-tabs>
   <ion-tabs>
 
-    <ion-tab-bar slot="bottom">
+    <ion-tab-bar slot="bottom" id = "bottom">
       <ion-tab-button tab="tab1">
         <ion-icon name="basketball"></ion-icon>
         <ion-label>Host</ion-label>
       </ion-tab-button>
   
       <ion-tab-button tab="tab2">
-        <ion-icon name="location-outline"></ion-icon>
+        <ion-icon src="../../assets/icon/Vector1.png"></ion-icon>
         <ion-label>Join</ion-label>
       </ion-tab-button>
   
