--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,48 +1,43 @@
-<ion-content [fullscreen]="true">
+<ion-content >
   <div>
    <ion-button routerLink="/home" size ="small"> Home
       <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
     </ion-button>  
       <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
   </div> 
-  <h1>Hugh National Park</h1>
-  <h2> <ion-icon src="../../assets/icon/Vector2.png"></ion-icon>
-    3577 Saint jone ave.
-  </h2>
-   <div id= "sport"> 
-    Sport
+  <h1 id= "location">Hugh National Park</h1>
+  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (2).png">
+    3577 Saint Jone ave.</h2>
+  <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
+  <div>
+    <p id= "sport"> <img height=20 width =20 src="../../assets/icon/Vector2.png">
+    Soccer
+   </p>
+  <p id= "time">20 April 5:00pm
+    </p>
   </div>
-  <ion-datetime>DD MMM H:mm</ion-datetime>
-  
-  <div id= "container">
-      <h1> <span display=inline> Host</span>
-      <span float="left"> Players</span>
-    </h1>
-      <!-- <body>
-        <ion-item id="hostplayer">
-          <ion-label>Jaden</ion-label>
-          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-        </ion-item>
-        List of players 
-      <ion-list id="players">
-        <ion-item >
-          <ion-label>Nery</ion-label>
-          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-        </ion-item>
-        <ion-item>
-          <ion-label>Charmander</ion-label>
-          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-        </ion-item>
-        <ion-item>
-          <ion-label>Blue eyes white dragon</ion-label>
-          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-        </ion-item>
-        <ion-item>
-          <ion-label>Philip J. Fry</ion-label>
-          <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-        </ion-item>
-      </ion-list>
-    </body> -->
+   <div id= "leftcontainer">
+      <h1 id ="hostheader"> Host </h1>
+      <body id= "host">
+        <p>
+          <img src="../../assets/icon/favicon.png" class = "icon">Jaden
+        </p>
+      </body>
+    </div>
+        <!-- List of players  -->
+    <div  id ="rightcontainer">
+      <h1 id="playerheader"> Players</h1>
+      <body id= "player">
+        <p>
+         <img src="../../assets/icon/favicon.png" class = "icon">Nery
+        </p>
+        <p>
+          <img src="../../assets/icon/favicon.png" class = "icon">Fry
+        </p>
+        <p>
+         <img src="../../assets/icon/favicon.png" class = "icon">Rick
+        </p>
+    </body>
     </div>
   <div id="Joinbutton"> Join</div>
     
