--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,30 +1,37 @@
-<ion-content [fullscreen]="true">
-<ion-navbar>
-  <ion-button routerLink="/home" size ="small"> Home
-    <ion-icon name="home-outline"></ion-icon>    </ion-button>
-  <ion-title class="titles">
-    Join
-  </ion-title>
-</ion-navbar>
+<ion-content >
+  <div>
+   <ion-button routerLink="/home" size ="small"> Home
+      <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
+    </ion-button>  
+      <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
+  </div> 
+  <ion-input class = "questions">Location <img src="../../assets/icon/favicon.png" class = "icon"> </ion-input>
+  <ion-input class = "questions">Sport <img src="../../assets/icon/favicon.png" class = "icon"></ion-input>
   
-  <h1 class="questions">
-    <ion-input placeholder="Park name" margin-top= 100px></ion-input>
-  </h1>
-  <h1 class="questions">
-    <ion-input placeholder="Sport"></ion-input>
-  </h1>
-  <h1 class="questions">
-    <ion-input placeholder="Date"></ion-input>
-  </h1>
-  <h1 class="questions">
-    <ion-input placeholder="Age"></ion-input>
-  </h1>
-  <h1 class="questions">
-    <ion-input placeholder="Number of players"></ion-input>
-  </h1>
-  <h1 class="questions">
-    <ion-input placeholder="Player's profiles"></ion-input>
-  </h1>
+  <div id= "leftcontainer">
+      <h1 id ="hostheader"> Host </h1>
+      <body id= "host">
+        <p>
+          <img src="../../assets/icon/favicon.png" class = "icon">Jaden
+        </p>
+      </body>
+    </div>
+        <!-- List of players  -->
+    <div  id ="rightcontainer">
+      <h1 id="playerheader"> Players</h1>
+      <body id= "player">
+        <p>
+         <img src="../../assets/icon/favicon.png" class = "icon">add player
+        </p>
+    </body>
+    </div>
+  <div id="Hostbutton"> Host</div>
+  <ion-input class = "questions">Time <img src="../../assets/icon/favicon.png" class = "icon"></ion-input>
+
+    
+  
+
 
 
 </ion-content>
+
