--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,17 +1,59 @@
-.titles{
-    text-align:center;
-    font-size: 75px;
-    border-style:solid;
-    background-color: grey;
-    height: 10%;
-    margin-bottom: 10%;
-}
 .questions{
-    border: 2px solid grey;
-    border-radius:25px;
-    width: 100%;
+    border:0px solid lightgreen;
+    border-bottom: 1px solid lightgreen;
+    height: 5% ;
+    width: 50%;
+    margin-left: 25%;
     text-align: center;
-    height: 7%;
-    background-color: lightgrey;
-
+}
+#leftcontainer{
+    display: inline-flex;
+    border: 1px solid lightgreen;
+    border-radius: 10px 0px 0px 10px;
+    width:50%;
+    height: 25%;
+    
+}
+#rightcontainer{
+    display: inline-flex;
+    border: 1px solid lightgreen;
+    border-radius: 0px 10px 10px 0px;
+    height:25%;
+    width:50%;
+    border-left: 0px;
+    
+}
+#Hostbutton{
+    position: fixed;
+    bottom:0px;
+    border-width: thin ;
+    border-radius: 10;
+    background-color: darkgoldenrod;
+    border-radius:5px;
+    width:50%;
+    height:40px;
+    text-align: center;
+    margin-left: 25%;
+    font-size: 30px;
+    color: white;
+}
+.icon{
+    height: 20px;
+    width: 20px;
+}
+#player{
+    margin-top: 10%;
+    padding-left: 10px;
+    font-size: 15px;
+}
+#host{
+    margin-top: 10%;
+    padding-left: 10px;
+    font-size: 15px;
+}
+#hostheader{
+    padding-left:60px;
+}
+#playerheader{
+    padding-left:50px;
 }
