--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,17 +3,17 @@
 
     <ion-tab-bar slot="bottom" id = "bottom">
       <ion-tab-button tab="tab1">
-        <ion-icon name="basketball"></ion-icon>
+        <img src="../../assets/icon/Vector.png">
         <ion-label>Host</ion-label>
       </ion-tab-button>
   
       <ion-tab-button tab="tab2">
-        <ion-icon src="../../assets/icon/Vector1.png"></ion-icon>
+        <img src="../../assets/icon/Vector1.png">
         <ion-label>Join</ion-label>
       </ion-tab-button>
   
       <ion-tab-button tab="tab3">
-        <ion-icon name="person-circle-outline"></ion-icon>
+        <img src="../../assets/icon/Group.png">
         <ion-label>Account</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
