--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,55 +1,48 @@
-<ion-content>
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-searchbar [(ngModel)]="autocomplete.input" (ionInput)="UpdateSearchResults()" placeholder="Search for a place"  (ionClear)="ClearAutocomplete()"></ion-searchbar>
-    </ion-toolbar>
-    <ion-list [hidden]="autocompleteItems.length == 0">
-      <ion-item *ngFor="let item of autocompleteItems" tappable (click)="SelectSearchResult(item)">
-        {{ item.description }}
-      </ion-item>
-    </ion-list>
-    <ion-row>    
-      <ion-col size="6">
-        <ion-text>Google & Ionic Map</ion-text>
-      </ion-col>
-      <ion-col  size="6">
-        <ion-button (click)="loadMap()" shape="round" fill="outline">
-          <ion-icon slot="start" name="locate"></ion-icon>
-            Where I Am
-          </ion-button>
-      </ion-col>
-    </ion-row>  
-  </ion-header>
-  <ion-content> 
-    <ion-fab vertical="bottom" horizontal="start" slot="fixed">
-      <ion-fab-button (click)="ShowCords()" ion-fab color="tertiary">
-        <ion-icon name="information-circle-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-    <div class="map-wrapper" style="height: 100%;">      
-      <div id="map_center">
-        <ion-icon name="pin" size="large" color="danger"></ion-icon>      
-      </div>
-      <div #map id="map"  style="height: 100%;"></div>
-    </div>   
-  <!-- tabs  -->
-  <ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" >
-      <ion-icon name="basketball"></ion-icon>
-      <ion-label>Host</ion-label>
-    </ion-tab-button>
+<ion-content >
+  <div>
+   <ion-button routerLink="/home" size ="small"> Home
+      <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
+    </ion-button>  
+      <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
+  </div> 
+  <h1 id= "location">Hugh National Park</h1>
+  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (2).png">
+    3577 Saint Jone ave.</h2>
+  <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
+  <div>
+    <p id= "sport"> <img height=20 width =20 src="../../assets/icon/Vector2.png">
+    Soccer
+   </p>
+  <p id= "time">20 April 5:00pm
+    </p>
+  </div>
+   <div id= "leftcontainer">
+      <h1 id ="hostheader"> Host </h1>
+      <body id= "host">
+        <p>
+          <img src="../../assets/icon/favicon.png" class = "icon">Jaden
+        </p>
+      </body>
+    </div>
+        <!-- List of players  -->
+    <div  id ="rightcontainer">
+      <h1 id="playerheader"> Players</h1>
+      <body id= "player">
+        <p>
+         <img src="../../assets/icon/favicon.png" class = "icon">Nery
+        </p>
+        <p>
+          <img src="../../assets/icon/favicon.png" class = "icon">Fry
+        </p>
+        <p>
+         <img src="../../assets/icon/favicon.png" class = "icon">Rick
+        </p>
+    </body>
+    </div>
+  <div id="Joinbutton"> Join</div>
+    
+  
 
-    <ion-tab-button tab="tab2" >
-      <ion-icon name="location-outline"></ion-icon>
-      <ion-label>Join</ion-label>
-    </ion-tab-button>
 
-    <ion-tab-button tab="tab3" >
-      <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label>Account</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
 
 </ion-content>
