--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,84 +1,33 @@
-#park{
-    width: max-content;
-    height: 10%;
-    margin-bottom: 10px;
-}
-#location{
-    font-size: 30px;
-    font-weight: bold ;
-    text-align: center;
-}
-#address{
-    font-size: 20px;
-    text-align: center;
-    color: lightgray;
-    margin-top: 0px;
-}
-// #line{
-//     color:"yellow";
-//     width: 75%;
-//     margin-left:25%;
-//     // height: 10px;
-//     // background-color: "yellow";
-
-// }
-#sport{
-    margin-left: 20px;
-}
-#time{
-   margin-left: 55%;
-   padding-top: 0px;
-}
-#leftcontainer{
-    display: inline-flex;
-    border: 1px solid lightgreen;
-    border-radius: 10px 0px 0px 10px;
-    width:49%;
-    height: 30%;
-    
-}
-#rightcontainer{
-    display: inline-flex;
-    border: 1px solid lightgreen;
-    border-radius: 0px 10px 10px 0px;
-    height:30%;
-    width:49%;
-    border-left: 0px;
-    
-}
-#Joinbutton{
-    position: fixed;
-    bottom:0px;
-    border-width: thin ;
-    border-radius: 10;
-    background-color: darkgoldenrod;
-    border-radius:5px;
-    width:50%;
-    height:40px;
-    text-align: center;
-    margin-left: 25%;
-    font-size: 30px;
-    color: white;
-}
-.icon{
-    height: 20px;
-    width: 20px;
-}
-#player{
-    margin-top: 10%;
-    padding-left: 10px;
-    font-size: 15px;
-}
-#host{
-    margin-top: 10%;
-    padding-left: 10px;
-    font-size: 15px;
-}
-#hostheader{
-    padding-left:60px;
-}
-#playerheader{
-    padding-left:50px;
-}
-
+#map_canvas {
+    width: 90%;
+    height: 80%;
+    border: 1px solid red;
+  }
+   
+   
+  #address {
+    padding: 10px;
+    font-size: 18px;
+    font-weight: bold;
+  }
+   
+  #map {
+    width: 100%;
+    height: 90%;
+  }
+   
+  .map-wrapper {
+    position: relative;
+   
+    #map_center {
+      position: absolute;
+      z-index: 99;
+      height: 40px;
+      width: 40px;
+      top: 50%;
+      left: 50%;
+      margin-left: -21px;
+      margin-top: -41px;
+    }
+  }
 
