--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -4,7 +4,7 @@
     height: 5% ;
     width: 50%;
     margin-left: 25%;
-    text-align: center;
+    margin-bottom: 5px;
 }
 #leftcontainer{
     display: inline-flex;
@@ -56,4 +56,8 @@
 }
 #playerheader{
     padding-left:50px;
+}
+#searchglass{
+    height: 20px;
+    width: 20px;
 }
