working on markers

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,50 +1,42 @@
 <ion-content>
   <ion-header>
-    <ion-toolbar color="primary">
       <ion-searchbar [(ngModel)]="autocomplete.input" (ionInput)="UpdateSearchResults()" placeholder="Search"  (ionClear)="ClearAutocomplete()"></ion-searchbar>
-    </ion-toolbar>
     <ion-list [hidden]="autocompleteItems.length == 0">
       <ion-item *ngFor="let item of autocompleteItems" tappable (click)="SelectSearchResult(item)">
         {{ item.description }}
       </ion-item>
     </ion-list>
-    <!-- <ion-row>    
-      <ion-col  size="6">
-        <ion-button (click)="loadMap()" shape="round" fill="outline">
-          <ion-icon slot="start" name="locate"></ion-icon>
-            Where I Am
-          </ion-button>
-      </ion-col>
-    </ion-row>   -->
   </ion-header>
-  <ion-content> 
-    <!-- <ion-fab vertical="bottom" horizontal="start" slot="fixed">
-      <ion-fab-button (click)="ShowCords()" ion-fab color="tertiary">
-        <ion-icon name="information-circle-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab> -->
     <div class="map-wrapper" style="height: 100%;">      
       <div #map id="map"  style="height: 100%;"></div>
     </div>   
+   
 
-  <!-- tabs 
-  <ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" >
-      <ion-icon name="basketball"></ion-icon>
-      <ion-label>Host</ion-label>
-    </ion-tab-button>
+<lib-ionic-pullup (onExpand)="footerExpanded()" (onCollapse)="footerCollapsed()" [(state)]="footerState" [toolbarTopMargin]="100" [minBottomVisible]="200">
 
-    <ion-tab-button tab="tab2" >
-      <ion-icon name="location-outline"></ion-icon>
-      <ion-label>Join</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3" >
-      <ion-icon name="person-circle-outline"></ion-icon>
-      <ion-label>Account</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs> -->
+  <ion-toolbar color="light" (click)="toggleFooter()" #ionDragFooter>
+      <ion-title>  <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
+      </ion-title>
+  </ion-toolbar>
+  <ion-content>        
+    <h1 id= "location">Hugh National Park</h1>
+    <h2 id="address"> <img height=10px width =10px src="../../assets/icon/Group (1).png">
+      3577 Saint Jone ave.</h2>
+    <body>
+      <div class = "game">
+        <p id="title"><img height=10px width =10px src="../../assets/icon/favicon.png">Soccer Match - Hosted by:Julio Cortez <button routerLink="/home"><img height=10px width =10px src="../../assets/icon/Farrow.png"> </button></p>
+        <p class = "status">Currently Playing</p>
+      </div>
+      <div class = "game">
+        <p id="title"><img height=10px width =10px src="../../assets/icon/favicon.png">Soccer Match - Hosted by:Sam Glizen </p>
+        <p class = "status">Reserverd for 2:30</p>
+      </div>
+    </body>
+  </ion-content>
+  </lib-ionic-pullup>
+  <button type="button" class="btn btn-outline-secondary mr-2" placement="Top"
+  ngbPopover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." popoverTitle="Popover on bottom">
+Popover on bottom
+</button>
 
 </ion-content>
