--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -33,7 +33,7 @@
         </p>
     </body>
     </div>
-  <div id="Hostbutton"> Host</div>
+  <div id="Hostbutton" routerLink="/tabs/tab1"> Host</div>
  <input class = "questions" placeholder="Date/Time" padding-top = 15px> 
     
   
