--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-content >
   <div>
-   <ion-button routerLink="/home" size ="small"> Home
+   <ion-button routerLink="/tabs/tab1" size ="small">
       <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
     </ion-button>  
       <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
   </div> 
   <h1 id= "location">Hugh National Park</h1>
-  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (2).png">
+  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (1).png">
     3577 Saint Jone ave.</h2>
   <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
   <div>
@@ -39,7 +39,7 @@
         </p>
     </body>
     </div>
-  <div id="Joinbutton"> Join</div>
+  <div id="Joinbutton" routerLink="/tabs/tab1"> Join</div>
     
   
 
