--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -30,4 +30,24 @@
       margin-top: -41px;
     }
   }
+#line{
+  height: 5px;
+  border-radius: 10px;
+}
+#location{
+  font-size: 20px;
+  font-weight: bold ;
+  text-align: left;
+}
+#address{
+  font-size: 10px;
+  text-align: left;
+  margin-top: 0px;
+}
+.title{
+  color: black;
+}
+.status{
+  color: lightgreen;
+}
 
