--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,42 +1,32 @@
 <ion-content >
-  <div>
-   <ion-button routerLink="/home" size ="small"> Home
-      <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
-    </ion-button>  
-      <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
-  </div> 
-  <input class = "questions" placeholder="Location"> 
-  <img id = "searchglass" src="../../assets/icon/ei_search (1).png"> 
-    <ion-item class = "questions">
-    <ion-label>Sport</ion-label>
-    <ion-select value="soccer" ok-text="Okay" cancel-text="Dismiss">
-      <ion-select-option value="soccer">Soccer</ion-select-option>
-      <ion-select-option value="blonde">Basketball</ion-select-option>
-    </ion-select>
-  </ion-item>
+  <!-- title -->
+  <div id= "Friendstitle"> 
+    <img id = "titleicon" src = "../../assets/icon/Vector (2).png">
+    <h1 id = "title">Friends</h1>
+  </div>
+  <!-- Friendslist -->
+  <div id= "Friends">
+    <p id = "friend">
+      <img class= "icon" src = "../../assets/icon/Group (2).png">
+      Nery Guitron
+      <img class= "rightarrow" src = "../../assets/icon/25_dropdown_menu_down_arrow-512 6.png">
+    </p>
+  </div>
+  <div id= "Friends">
+    <p id = "friend">
+      <img class= "icon" src = "../../assets/icon/Group (2).png">
+      Ricardo Martinez
+      <img class= "rightarrow" src = "../../assets/icon/25_dropdown_menu_down_arrow-512 6.png">
+    </p>
+  </div>
+  <div id= "Friends">
+    <p id = "friend">
+      <img class= "icon" src = "../../assets/icon/Group (2).png">
+      Jesus Estrada
+      <img class= "rightarrow" src = "../../assets/icon/25_dropdown_menu_down_arrow-512 6.png">
+    </p>
+  </div>
 
-  
-  <div id= "leftcontainer">
-      <h1 id ="hostheader"> Host </h1>
-      <body id= "host">
-        <p>
-          <img src="../../assets/icon/favicon.png" class = "icon">Jaden
-        </p>
-      </body>
-    </div>
-        <!-- List of players  -->
-    <div  id ="rightcontainer">
-      <h1 id="playerheader"> Players</h1>
-      <body id= "player">
-        <p>
-         <img src="../../assets/icon/favicon.png" class = "icon">add player
-        </p>
-    </body>
-    </div>
-  <div id="Hostbutton" routerLink="/tabs/tab1"> Host</div>
- <input class = "questions" placeholder="Date/Time" padding-top = 15px> 
-    
-  
 
 
 
