--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,26 +1,25 @@
 <ion-content >
   <div>
-   <ion-button routerLink="/tabs/tab1" size ="small">
+   <ion-button routerLink="/tabs/tab1" size ="small" id="backbutton">
       <ion-icon name="arrow-undo-circle-outline"></ion-icon>  
     </ion-button>  
-      <img  id= "park" src = "../../assets/96815186-outdoor-basketball-court.jpg">
+      <img  id= "park" src = "../../assets/icon/soccerfield.png">
   </div> 
   <h1 id= "location">Hugh National Park</h1>
-  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (1).png">
+  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (3).png">
     3577 Saint Jone ave.</h2>
   <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
-  <div>
-    <p id= "sport"> <img height=20 width =20 src="../../assets/icon/Vector2.png">
+  <span id= "subtitle">
+    <p id= "sport"> <img height=15 width =15 src="../../assets/icon/Vector (7).png">
     Soccer
-   </p>
-  <p id= "time">20 April 5:00pm
     </p>
-  </div>
+  <p id= "time">20 April 5:00pm </p>
+  </span>
    <div id= "leftcontainer">
       <h1 id ="hostheader"> Host </h1>
       <body id= "host">
         <p>
-          <img src="../../assets/icon/favicon.png" class = "icon">Jaden
+          <img src="../../assets/icon/Group (2).png" class = "icon">Julio Cortez
         </p>
       </body>
     </div>
@@ -29,17 +28,17 @@
       <h1 id="playerheader"> Players</h1>
       <body id= "player">
         <p>
-         <img src="../../assets/icon/favicon.png" class = "icon">Nery
+         <img src="../../assets/icon/Group (2).png" class = "icon">Nery Richerson
         </p>
         <p>
-          <img src="../../assets/icon/favicon.png" class = "icon">Fry
+          <img src="../../assets/icon/Group (2).png" class = "icon">Philip J. Fry
         </p>
         <p>
-         <img src="../../assets/icon/favicon.png" class = "icon">Rick
+         <img src="../../assets/icon/Group (2).png" class = "icon">Rick James
         </p>
     </body>
     </div>
-  <div id="Joinbutton" routerLink="/tabs/tab1"> Join</div>
+    <div id="Joinbutton" routerLink="/tabs/tab1"> Join</div>
     
   
 
