--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,6 @@
 #park{
   width: max-content;
-  height: 10%;
-  margin-bottom: 10px;
+  height: 250px;
 }
 #location{
   font-size: 30px;
@@ -22,12 +21,16 @@
 //     // background-color: "yellow";
 
 // }
+#subtitle{
+  display: inline;
+}
 #sport{
-  margin-left: 20px;
+  position: absolute;
+  top: 356px;
+  left: 20px;
 }
 #time{
  margin-left: 55%;
- padding-top: 0px;
 }
 #leftcontainer{
   display: inline-flex;
@@ -59,6 +62,7 @@
   margin-left: 25%;
   font-size: 30px;
   color: white;
+  margin-bottom: 10px;
 }
 .icon{
   height: 20px;
@@ -79,5 +83,11 @@
 }
 #playerheader{
   padding-left:50px;
+}
+#backbutton{
+  position: absolute;
+  top: 15px;
+  right: 15px;
+
 }
 
