--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,15 +3,15 @@
 
     <ion-tab-bar slot="bottom" id = "bottom">
       <ion-tab-button tab="tab1">
-        <img src="../../assets/icon/Vector.png">
+        <img src="../../assets/icon/Vector (5).png">
       </ion-tab-button>
   
       <ion-tab-button tab="tab2">
-        <img src="../../assets/icon/Vector1.png">
+        <img src="../../assets/icon/Vector (6).png">
       </ion-tab-button>
   
       <ion-tab-button tab="tab3">
-        <img src="../../assets/icon/Group.png">
+        <img src="../../assets/icon/Group (2).png">
       </ion-tab-button>
     </ion-tab-bar>
   
