--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
       <img  id= "park" src = "../../assets/icon/soccerfield.png">
   </div> 
   <h1 id= "location">Hugh National Park</h1>
-  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (3).png">
+  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Soccer Pin.png">
     3577 Saint Jone ave.</h2>
   <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
   <span id= "subtitle">
