--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
       <img  id= "park" src = "../../assets/icon/soccerfield.png">
   </div> 
   <h1 id= "location">Hugh National Park</h1>
-  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Soccer Pin.png">
+  <h2 id="address"> <img height=20 width =20 src="../../assets/icon/Group (3).png">
     3577 Saint Jone ave.</h2>
   <hr id="line" color="darkgoldenrod" width=75% margin-left=25%>
   <span id= "subtitle">
@@ -17,16 +17,16 @@
   </span>
    <div id= "leftcontainer">
       <h1 id ="hostheader"> Host </h1>
-      <body id= "host">
+      <div id= "host">
         <p>
           <img src="../../assets/icon/Group (2).png" class = "icon">Julio Cortez
         </p>
-      </body>
+      </div>
     </div>
         <!-- List of players  -->
     <div  id ="rightcontainer">
       <h1 id="playerheader"> Players</h1>
-      <body id= "player">
+      <div id= "player">
         <p>
          <img src="../../assets/icon/Group (2).png" class = "icon">Nery Richerson
         </p>
@@ -36,7 +36,7 @@
         <p>
          <img src="../../assets/icon/Group (2).png" class = "icon">Rick James
         </p>
-    </body>
+      </div>
     </div>
     <div id="Joinbutton" routerLink="/tabs/tab1"> Join</div>
     
