--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -35,12 +35,12 @@
   border-radius: 10px;
 }
 #location{
-  font-size: 20px;
+  font-size: 35px;
   font-weight: bold ;
   text-align: left;
 }
 #address{
-  font-size: 10px;
+  font-size: 25px;
   text-align: left;
   margin-top: 0px;
 }
@@ -67,4 +67,11 @@
   font-size: 30px;
   color: white;
 }
-
+.arrow{
+  height: 20px;
+  width:20px;
+}
+.accounticon{
+  height: 20px;
+  width:20px;
+}
