--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -20,15 +20,15 @@
   </ion-toolbar>
   <ion-content>        
     <h1 id= "location">Hugh National Park</h1>
-    <h2 id="address"> <img height=10px width =10px src="../../assets/icon/Group (3).png">
+    <h2 id="address"> <img height=25px width =25px src="../../assets/icon/Group (3).png">
       3577 Saint Jone ave.</h2>
     <body>
       <div class = "game">
-        <p id="title"><img height=10px width =10px src="../../assets/icon/Group (2).png">Soccer Match - Hosted by:Julio Cortez <button routerLink="/home"><img height=10px width =10px src="../../assets/icon/Group (4).png"> </button></p>
+        <p id="title"><img class = "accounticon" src="../../assets/icon/Group (2).png">Soccer Match - Hosted by:Julio Cortez <button routerLink="/home"><img class="arrow" height=10px width =10px src="../../assets/icon/Group (4).png"> </button></p>
         <p class = "status">Currently Playing</p>
       </div>
       <div class = "game">
-        <p id="title"><img height=10px width =10px src="../../assets/icon/Group (2).png">Soccer Match - Hosted by:Sam Glizen  <button routerLink="/home"><img height=10px width =10px src="../../assets/icon/Group (4).png"> </button> </p>
+        <p id="title"><img class = "accounticon" src="../../assets/icon/Group (2).png">Soccer Match - Hosted by:Sam Glizen  <button routerLink="/home"><img class="arrow" height=10px width =10px src="../../assets/icon/Group (4).png"> </button> </p>
         <p class = "status">Reserverd for 2:30</p>
       </div>
       <div id="Createbutton" routerLink="/host"> Create Game</div>
